fix align

--- a/frontend/src/sites/AdministrationList/Administration.scss
+++ b/frontend/src/sites/AdministrationList/Administration.scss
@@ -13,8 +13,8 @@
         #administrationlist-list {
             padding: 0 5px !important;
         }
-        #administrationlist-head h1 {
-            text-align: center !important;
+        #administrationlist-head {
+            justify-content: center;
         }
     }
 
